@@ -6,8 +6,8 @@ dependencies {
     implementation(project(":partdb-transport-grpc"))
     implementation(project(":partdb-client"))
 
-    val logbackVersion = "1.5.23"
-    val logstashEncoderVersion = "8.1"
+    val logbackVersion = "1.5.32"
+    val logstashEncoderVersion = "9.0"
 
     runtimeOnly("ch.qos.logback:logback-classic:$logbackVersion")
     runtimeOnly("net.logstash.logback:logstash-logback-encoder:$logstashEncoderVersion")
@@ -15,4 +15,5 @@ dependencies {
 
 application {
     mainClass.set("io.partdb.app.PartDbApp")
+    applicationDefaultJvmArgs = listOf("--sun-misc-unsafe-memory-access=allow")
 }
